==> tonym128/ESP32_Arduboy/src/Arduboy2Core.cpp <==
#include "Arduboy2Core.h"
#include "Button2.h"
#include <Ps3Controller.h>

void Arduboy2Core::boot()
{
  Serial.begin(115200);
#ifdef ESP32
  esp_timer_init();
#endif
  //WiFi.mode(WIFI_OFF);
  delay(100);
//LED init
#ifdef ESP8266
  myled.begin();
#endif

#ifdef ADAFRUIT
  //DAC init, LCD backlit off
  dac.begin(MCP4725address);
  delay(50);
  dac.setVoltage(0, false);
  delay(100);

  //MCP23017 and buttons init, should preceed the TFT init
  mcp.begin(MCP23017address);
  delay(100);

  for (int i = 0; i < 8; ++i)
  {
    mcp.pinMode(i, INPUT);
    mcp.pullUp(i, HIGH);
  }

  //Sound init and test
  pinMode(PIN_SPEAKER_1, OUTPUT);
  tone(PIN_SPEAKER_1, 200, 100);
  delay(100);
  tone(PIN_SPEAKER_1, 100, 100);
  delay(100);
  noTone(PIN_SPEAKER_1);

  //TFT init
  mcp.pinMode(CSTFTPIN, OUTPUT);
  mcp.digitalWrite(CSTFTPIN, LOW);
#endif

#if defined(EPAPER130)
  displayEPaper.init(115200);
#else
  screen.begin();
  delay(200);
  screen.setRotation(0);
  screen.fillScreen(TFT_BLACK);
#endif
  Serial.write("Screen Init\r\n");

#ifdef ADAFRUIT
  //LCD backlit on
  for (uint8_t bcklt = 0; bcklt < 100; bcklt++)
  {
    dac.setVoltage(bcklt * 20, false);
    delay(10);
  }

  dac.setVoltage(4095, true);
  delay(500);
#else
  delay(100);
#endif

#if defined(EPAPER130)
  displayEPaper.firstPage();
  do
  {
    displayEPaper.fillScreen(GxEPD_WHITE);
  } while (displayEPaper.nextPage());
#else
  screen.fillScreen(TFT_BLACK);
#endif
  Serial.write("Boot Done!");
}

void Arduboy2Core::displayOff()
{
#ifdef ADAFRUIT
  dac.setVoltage(0, false);
#endif
}

void Arduboy2Core::setRGBled(uint8_t red, uint8_t green, uint8_t blue)
{
#ifdef ESP8266
  myled.setRGB(red, green, blue);
#endif
}

void Arduboy2Core::setRGBled(uint8_t color, uint8_t val)
{
#ifdef ESP8266
  if (color == RED_LED)
    myled.setR(val);
  else if (color == GREEN_LED)
    myled.setG(val);
  else if (color == BLUE_LED)
    myled.setB(val);
#endif
}

void Arduboy2Core::digitalWriteRGB(uint8_t red, uint8_t green, uint8_t blue)
{
#ifdef ESP8266
  if (red)
    myled.setR(200);
  else
    myled.setR(0);
  if (green)
    myled.setG(200);
  else
    myled.setG(0);
  if (blue)
    myled.setB(200);
  else
    myled.setB(0);
#endif
}

void Arduboy2Core::digitalWriteRGB(uint8_t color, uint8_t val)
{
#ifdef ESP8266
  if (color == 0)
    if (val)
      myled.setR(200);
    else
      myled.setR(0);
  if (color == 1)
    if (val)
      myled.setG(200);
    else
      myled.setG(0);
  if (color == 2)
    if (val)
      myled.setB(200);
    else
      myled.setB(0);
#endif
}

uint8_t Arduboy2Core::buttonsState()
{
  buttons = 0;
#ifdef ESP8266
  keystate = ~mcp.readGPIOAB() & 255;

  // LEFT_BUTTON, RIGHT_BUTTON, UP_BUTTON, DOWN_BUTTON, A_BUTTON, B_BUTTON
  if (keystate & PAD_ANY)
  {
    if (keystate & PAD_LEFT)
    {
      buttons |= LEFT_BUTTON;
    } // left
    if (keystate & PAD_RIGHT)
    {
      buttons |= RIGHT_BUTTON;
    } // right
    if (keystate & PAD_UP)
    {
      buttons |= UP_BUTTON;
    } // up
    if (keystate & PAD_DOWN)
    {
      buttons |= DOWN_BUTTON;
    } // down
    if (keystate & PAD_ACT)
    {
      buttons |= A_BUTTON;
    } // a?
    if (keystate & PAD_ESC)
    {
      buttons |= B_BUTTON;
    } // b?
  }

#else
  // Initial Setup
  if (inputSetup)
  {
    #ifdef GAMEPAD
    if (xSemaphoreTake(xSemaphoreInput, (TickType_t)100) == pdTRUE)
    {
      keystate = keyStateThread;
      xSemaphoreGive(xSemaphoreInput);
    }
    #elif defined(ONEBUTTON)
    // Disabled threading because of instantaneous press checks.
     keystate = buttonCheck();
    #elif defined(PS3GAMEPAD)
    #if defined(EPAPER130)
    keystate = getReadShift();
    #else
    if (xSemaphoreTake(xSemaphoreInput, (TickType_t)100) == pdTRUE)
    {
      keystate = keyStateThread;
      xSemaphoreGive(xSemaphoreInput);
    }
    #endif
    #endif

    if (keystate & BIT_P1_Left)
      buttons |= LEFT_BUTTON; //Left
    if (keystate & BIT_P1_Right)
      buttons |= RIGHT_BUTTON; //Right
    if (keystate & BIT_P1_Top)
      buttons |= UP_BUTTON; //Up
    if (keystate & BIT_P1_Bottom)
      buttons |= DOWN_BUTTON;
    ; //Down
    if (keystate & BIT_P2_Right)
      buttons |= A_BUTTON;
    ; //A
    if (keystate & BIT_P2_Bottom)
      buttons |= A_BUTTON; //A
    if (keystate & BIT_P2_Left)
      buttons |= B_BUTTON; //B
    if (keystate & BIT_P2_Top)
      buttons |= B_BUTTON; //B
  }
  else
  {
#ifdef GAMEPAD
    TaskHandle_t xHandle = NULL;
    xSemaphoreInput = xSemaphoreCreateMutex();
    getRawInput();
    for (int i = 0; i < 8; i++)
    {
      TOUCH_SENSE[i] /= 2;
      if (TOUCH_SENSE[i] > TOUCH_SENSE_MAX)
        TOUCH_SENSE[i] = TOUCH_SENSE_MAX;
      if (TOUCH_SENSE[i] < TOUCH_SENSE_MIN)
        TOUCH_SENSE[i] = TOUCH_SENSE_MIN;
    }

    xTaskCreatePinnedToCore(inputThread, "Input", 1024, nullptr, 1, &xHandle, 0);
#endif
    
    #ifdef PS3GAMEPAD
    #ifndef EPAPER130
    TaskHandle_t xHandle = NULL;
    xSemaphoreInput = xSemaphoreCreateMutex();
    xTaskCreatePinnedToCore(inputThread, "Input", 1024, nullptr, 1, &xHandle, 0);
    #endif
    #endif

    inputSetup = true;
  }
#endif

  return buttons;
}
